--- a/lanqiao.html
+++ b/lanqiao.html
@@ -1,7 +1,10 @@
-<html>
-    <body>
-        The hanged document!
-    </body>
+<html lang="en">
     <head>
+        <title>赶紧到十点下课啊</title>
     </head>
+    <body>
+        <h1>脑子要转不动了</h1>
+        <img src="微信图片_20250307194006.jpg"/>
+        <p><不想上课了/p>
+    </body>
 </html>
