--- a/32.html
+++ b/32.html
@@ -7,7 +7,7 @@
     <title>简单汇率兑换器</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial, sans-erif;
             background-color: #f4f4f4;
             display: flex;
             justify-content: center;
